# MultiprocessorSchedulingProblem

./: .travis.yml  CMakeLists.txt  README.md
src/: Answer.cpp  Answer.h  Machine.cpp  Machine.h  MultiprocessorSchedulingAlgorihtm.h  Task.cpp  Task.h  test.cpp
src_latex/: main.tex  references.bib
